# bookdb

./: .flake8  .gitignore  alembic.ini  env.example  pyproject.toml
app/: __init__.py  config.py  db.py  types.py
app/api/: auth.py  book.py
app/dto/: auth.py
app/models/: base.py  book.py  user.py
app/repositories/: base.py  book.py  user.py
app/services/: auth.py  book.py
app/utils/: auth.py
migrations/: env.py  migrate.py
migrations/sql/: 0001_initial_downgrade.sql  0001_initial_upgrade.sql
migrations/versions/: 450673b67995_init.py  687a1a26a747_.py  b8d435d4e1a1_.py  ccc7710a8a81_.py
