[project]
name = ""
version = ""
description = ""
authors = [
    {name = "alex-korzh", email = "alex@korzh.me"},
]
dependencies = [
    "fastapi[all]>=0.79.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy[postgresql_asyncpg]>=1.4.39",
    "alembic>=1.8.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.6.0",
    "mypy>=0.971",
    "flake8>=4.0.1",
    "isort>=5.10.1",
]
